refactor: remove user_page class and fix DOM manipulation issue.

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ input {
     appearance: none;
     width: 16px;
     height: 16px;
-    border: 2px solid #ccc;
+    border: 2px solid #30415D;
     border-radius: 3px;
     background-color: white;
     cursor: pointer;
